--- a/javascript_tooling/public/index.html
+++ b/javascript_tooling/public/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
     <head>
-        <title>Webpack </title>
+        <title>Webpack example</title>
     </head>
     <body>
         <h1>Hello</h1>
